# simple-binary-encoding

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ExampleUsingGeneratedStub.sbe  README.md  build-java.xml  build-local.properties.example  build.gradle  build.properties  build.xml  gradle.properties  perf-build.xml  sbe-pom.xml  settings.gradle  templates_FixBinary.xml  version.txt
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  pre-release-ci.yml  pre-release.yml  release.yml  slow.yml
config/: checkstyle.xml  suppress.xml
config/checkstyle/: checkstyle.xml  suppress.xml  suppressions.xml
cppbuild/: cppbuild  cppbuild.cmd
csharp/: GlobalAssemblyInfo.cs  README.md  build.sh  csharp.sln  csharpbuild.cmd  netfx.props  pack.sh  runtests.sh
csharp/.build/: MSBuild.Community.Tasks.targets
csharp/.nuget/: SBE.nuspec  do-release.sh  sbe-tool.sh
csharp/sbe-benchmarks/: Program.cs  sbe-benchmarks.csproj
csharp/sbe-dll/: DirectBuffer.cs  EndianessConverter.cs  PrimitiveType.cs  PrimitiveValue.cs  README.txt  SbePrimitiveType.cs  packages.config  sbe-dll.csproj  sbe-tool.sh
csharp/sbe-generated/: sbe-generated.csproj
csharp/sbe-samples/: CarExample.cs  ExtensionExample.cs  Program.cs  sbe-samples-car.csproj  sbe-samples-extension.csproj
csharp/sbe-samples-car/: CarExample.cs  sbe-samples-car.csproj
csharp/sbe-samples-extension/: ExtensionExample.cs  sbe-samples-extension.csproj
csharp/sbe-tests/: BigEndianTests.cs  DirectBufferTests.cs  DtoTests.cs  EndianessConverterTests.cs  FieldAccessOrderCheckTests.cs  InteropTests.cs  Issue435Tests.cs  Issue483Tests.cs  Issue560Tests.cs  Issue992Tests.cs  SinceDeprecatedTests.cs  packages.config  sbe-tests.csproj
examples/cpp98/: SbeExample.cpp  SbeOtfDecoder.cpp
examples/cpp99/: SbeExample.cpp  SbeOtfDecoder.cpp
examples/csharp/: .gitignore  Adaptive.SimpleBinaryEncoding.Examples.csproj  BooleanType.cs  Car.cs  Engine.cs  GroupSizeEncoding.cs  MessageHeader.cs  Model.cs  OptionalExtras.cs  Program.cs  SbeProgram.cs  VarDataEncoding.cs  csharp.sln
examples/python/: .gitignore  README.md  decode_example.py  encode_example.py
examples/resources/: TestExtensionSchema.xml  TestSchema.xml  example-extension-schema.xml  example-schema.xml
gocode/: Makefile  README.md  go.mod  go.sum  sbe-tool
gocode/resources/: example-bigendian.xml  example-composite.xml  example-extension-2-schema.xml  group-with-data-extension-schema.xml  issue435.xml  simple.xml
gradle/: build-scans.gradle  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
main/android/: NOTICE
main/cpp/: sample.h
main/csharp/: Adaptive.SimpleBinaryEncoding.csproj  ByteOrder.cs  DirectBuffer.cs  DirectBuffer2.cs  DotNetPort-Notes.txt  EndianessConverter.cs  IDirectBuffer.cs  IFixedFlyweight.cs  IMessageFlyweight.cs  PrimitiveType.cs  PrimitiveValue.cs  Representation.cs  SbePrimitiveType.cs
main/java/: overview.html  pom.xml
main/resources/: sbe-ir.xml
main/scala/: ScalaPort-Notes.txt
perf/cpp/: CMakeLists.txt  CarBench.cpp  CodecBench.hpp  MarketDataBench.cpp  NosBench.cpp  PbMarketDataBench.cpp  PbMarketDataCodecBench.hpp  SbeCarCodecBench.hpp  SbeMarketDataCodecBench.hpp  SbeNosCodecBench.hpp  benchlet-main.cpp  benchlet.hpp
perf/csharp/: .gitignore
python/tests/: test_car_example.py  test_issue435.py  test_issue483.py  test_issue560.py
rust/: Cargo.toml  car_example_extension_data.sbe
rust/benches/: car_benchmark.rs  md_benchmark.rs
rust/car_example/: Cargo.toml  README.md
rust/car_example/src/: main.rs
rust/tests/: baseline_enum_from_str.rs  baseline_enum_into.rs  baseline_enum_to_str.rs  baseline_test.rs  big_endian_test.rs  extension_test.rs  fixed_sized_primitive_array.rs  issue_435_test.rs  issue_895_test.rs  issue_972_test.rs  issue_984_test.rs  issue_987_test.rs
samples/docs/: FIX Simple Binary Encoding pre-RC2.docx  (+1 more)
sbe-samples/src/main/cpp/: CMakeLists.txt  GeneratedStubExample.cpp  OtfExample.cpp  SbeExample.cpp  SbeOtfDecoder.cpp
sbe-tool/src/main/cpp/: CMakeLists.txt  dummy.cpp
sbe-tool/src/main/cpp/otf/: Encoding.h  IrDecoder.h  OtfHeaderDecoder.h  OtfMessageDecoder.h  Token.h
sbe-tool/src/main/cpp/otf_api/: Group.h  Ir.cpp  Ir.h  IrCollection.h  Listener.cpp  Listener.h  OnError.h  Token.h
sbe-tool/src/main/cpp/sbe/: sbe.h  sbe.hpp
sbe-tool/src/main/cpp/uk_co_real_logic_sbe_ir_generated/: ByteOrderCodec.h  FrameCodec.h  MessageHeader.h  PresenceCodec.h  PrimitiveTypeCodec.h  SignalCodec.h  SignalCodec.hpp  TokenCodec.h  TokenCodec.hpp  VarDataEncoding.h  VarDataEncoding.hpp
sbe-tool/src/test/c/: BoundsCheckTest.cpp  CComplianceTest.c  CComplianceWithVersionTest.c  CMakeLists.txt  CodeGenTest.cpp  GroupWithDataTest.cpp  Issue889Test.cpp
sbe-tool/src/test/cpp/: BoundsCheckTest.cpp  CMakeLists.txt  CodeGenTest.cpp  CompositeElementsTest.cpp  CompositeOffsetsCodeGenTest.cpp  CompositeOffsetsIrTest.cpp  DtoTest.cpp  FieldAccessOrderCheckTest.cpp  GroupWithDataTest.cpp  Issue835Test.cpp  Issue889Test.cpp  MessageBlockLengthTest.cpp  OtfFullIrTest.cpp  OtfIrTest.cpp  OtfMessageHeaderTest.cpp  OtfMessageTest.cpp  OtfMessageTest.h  OtfMessageTestCBs.h  Rc3OtfFullIrTest.cpp  StringTest.cpp  VersionedMessageTest.cpp
src/main/cpp/: CMakeLists.txt
src/main/cpp/otf_api/: Field.h  Group.h  Ir.cpp  Ir.h  IrCollection.h  Listener.cpp  Listener.h  OnCompleted.h  OnError.h  OnNext.h
src/main/cpp/sbe/: sbe.hpp
src/main/cpp/uk_co_real_logic_sbe_ir_generated/: FrameCodec.hpp  MessageHeader.hpp  PrimitiveTypeCodec.hpp  TokenCodec.hpp
test/cpp/: BasicOtfApiTest.cpp  BoundsCheckTest.cpp  CMakeLists.txt  CodeGenTest.cpp  CompositeOffsetsCodeGenTest.cpp  CompositeOffsetsIrTest.cpp  MessageBlockLengthTest.cpp  OtfArrayTest.cpp  OtfFullIrTest.cpp  OtfGroupTest.cpp  OtfIrTest.cpp  OtfMessageHeaderTest.cpp  OtfMessageTest.cpp  OtfMessageTest.h  OtfMessageTestCBs.h  OtfVariableDataTest.cpp  Sample2Test.cpp  Sample3Test.cpp  SampleTest.cpp
vs2013/: .gitignore  GlobalAssemblyInfo.cs  README.md  TrackJavaCommits.txt  build.bat  build.xml  vs2013.sln
(+946 files in other folders)
