[package]
name = "sbe_rust_example"
version = "0.1.0"
authors = []
edition = "2018"
publish = false

[dependencies]
examples_baseline = { path = "../generated/rust/baseline" }
examples_extension = { path = "../generated/rust/extension" }
examples_uk_co_real_logic_sbe_benchmarks = { path = "../generated/rust/uk_co_real_logic_sbe_benchmarks" }
examples_uk_co_real_logic_sbe_benchmarks_fix = { path = "../generated/rust/uk_co_real_logic_sbe_benchmarks_fix" }

issue_435 = { path = "../generated/rust/issue435" }
baseline_bigendian = { path = "../generated/rust/baseline-bigendian" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "car_benchmark"
harness = false

[[bench]]
name = "md_benchmark"
harness = false